syntax = "proto3";
option go_package = "cs.ubc.ca/cpsc416/onionRPC/relayNode";
package relayNode;

message PublicKey {
  bytes publicKey = 1;
}
message Encrypted{
  string encrypted = 1;
}

service RelayNodeService {
  rpc ExchangePublicKey(PublicKey) returns (PublicKey) {}
  rpc ForwardRequest(Encrypted) returns (Encrypted) {}
}
